Added Insetion sort and Fixed GUI for pc and mobile

--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link rel="shortcut icon" href="favIcon.png" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
+
+    <!--font-family: 'Roboto', sans-serif;-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;900&display=swap" rel="stylesheet">
     
     <title>Sorting Algo Visualizer</title>
 
@@ -38,8 +44,6 @@
                 <div class="sorting-algo">Bubble</div>
                 <div class="sorting-algo">Selection</div>
                 <div class="sorting-algo">Insertion</div>
-                <div class="sorting-algo">Quick</div>
-                <div class="sorting-algo">Merge</div>
             </div>
             <!--Sort Starter-->
             <div class="sorter">
