Added loading screen

--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
 
 </head>
 <body>
+    <section class="loader">
+        <div class="hypnotic"></div>
+        <div class="text">
+            loading
+        </div>
+    </section>
     <!--Start of everything-->
     <section class="everything">
         <nav class="nav-bar">
